page product - cate product

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weblandingpage",
+  "name": "web-thiet-ket-noi-that",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
